# STAREmaster

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  Makefile  Makefile.am  Makefile.in  README.md  _geo_file_8cpp.html  _geo_file_8cpp__incl.map  _geo_file_8cpp__incl.md5  _geo_file_8h.html  _geo_file_8h__dep__incl.map  _geo_file_8h__dep__incl.md5  _geo_file_8h__incl.map  _geo_file_8h__incl.md5  _geo_file_8h_source.html  _modis09_l2_geo_file_8h.html  _modis09_l2_geo_file_8h__incl.map  _modis09_l2_geo_file_8h__incl.md5  _modis09_l2_geo_file_8h_source.html  _modis_l2_geo_file_8h.html  _modis_l2_geo_file_8h__dep__incl.map  _modis_l2_geo_file_8h__dep__incl.md5  _modis_l2_geo_file_8h__incl.map  _modis_l2_geo_file_8h__incl.md5  _modis_l2_geo_file_8h_source.html  _netcdf_sidecar_file_8cpp.html  _netcdf_sidecar_file_8cpp__incl.map  _netcdf_sidecar_file_8cpp__incl.md5  _netcdf_sidecar_file_8h.html  _netcdf_sidecar_file_8h__dep__incl.map  _netcdf_sidecar_file_8h__dep__incl.md5  _netcdf_sidecar_file_8h__incl.map  _netcdf_sidecar_file_8h__incl.md5  _netcdf_sidecar_file_8h_source.html  _sidecar_file_8cpp.html  _sidecar_file_8cpp__incl.map  _sidecar_file_8cpp__incl.md5  _sidecar_file_8h.html  (+51 more)
.github/workflows/: autotools.yml  autotools_2.yaml  autotools_hdfeos2.19.yml  autotools_hdfeos2.19_no_hdf4.yml  autotools_hdfeos2.19_no_openmp.yml  autotools_hdfeos2.20.yml  autotools_hyrax_dep.yml  autotools_macos_latest.yml  autotools_ubuntu_latest.yml  c-cpp.yml  cmake.yml  cmake_2.yml
cmake/: FindSTARE.cmake  Makefile.am
docs/: .gitignore  Doxyfile.in  Makefile.am
include/: GeoFile.h  Makefile.am  Modis043KGeoFile.h  Modis05L2GeoFile.h  Modis09GAGeoFile.h  Modis09L2GeoFile.h  ModisGeoFile.h  ModisL2GeoFile.h  NetcdfSidecarFile.h  STAREmaster.h  SidecarFile.h  ssc.h
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  defines_1.js  defines_2.js  files_0.js  files_1.js  files_2.js  files_3.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
src/: CMakeLists.txt  GeoFile.cpp  Makefile.am  Modis043KGeoFile.cpp  Modis05L2GeoFile.cpp  Modis09GAGeoFile.cpp  Modis09L2GeoFile.cpp  ModisGeoFile.cpp  ModisL2GeoFile.cpp  NetcdfSidecarFile.cpp  STAREmaster.c  SidecarFile.cpp  check_sidecar.cpp  createSidecarFile.cpp  mk_stare.cpp  print_stare.cpp
test/: CMakeLists.txt  Makefile.am  ref_MOD05_L2.A2005349.2125.061.2017294065400_inst_stare.cdl  ref_MOD05_L2.A2005349.2125.061.2017294065400_stare.cdl  ref_MOD09GA.A2020009.h00v08.006.2020011025435_stare.cdl  ref_MYD09.A2020058.1515.006.2020060020205_stare.cdl  run_large_file_tests.sh  run_large_file_tests.sh.in  run_tests.sh  t1.cpp  t2.cpp  t_MOD043K.cpp  tst_interp.cpp
test/data/: .gitattributes  MYD09.A2020058.1515.006.2020060020205.hdf  Makefile.am
